@@ -4,7 +4,6 @@ classification = feature prediction / genes
 [parameters]
 ;; --local for local alignment
 $;OTHER_OPTS$;=
-$;PASSWORD_FILE$; = /usr/local/devel/ANNOTATION/euk_genome_control/bin/password
 ;;Input sequence list used for hmmpfam run
 $;SEQUENCE_LIST$; =
 ;;HMM->CM lookup file, or directory to CMs (see documentation for specifics).
